--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: serif; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -55,6 +56,13 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+navigation {
+  display: flex;
+  gap: 1em;
+  justify-content: center;
+  align-items: center;
+}
+
 .card {
   padding: 2em;
 }
@@ -78,3 +86,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
