--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'din-regular';
+  font-style: normal;
+  font-weight: normal;
+  src: url('/DINNextW05-Regular.woff2') format('truetype');
+}
+
+@font-face {
+  font-family: 'din-medium';
+  font-style: normal;
+  font-weight: normal;
+  src: url('/DINNextW05-Medium.woff2') format('truetype');
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   /* font-family: serif; */
@@ -33,6 +47,7 @@ body {
 }
 
 h1 {
+  font-family: 'din-medium';
   font-size: 3.2em;
   line-height: 1.1;
 }
