--- a/src/style.css
+++ b/src/style.css
@@ -14,7 +14,6 @@
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  /* font-family: serif; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -71,6 +70,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+input[type="range"] {
+  vertical-align: text-top;
+}
+
 navigation {
   display: flex;
   gap: 1em;
@@ -79,7 +82,11 @@ navigation {
 }
 
 .card {
-  padding: 2em;
+  padding: 1em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 3em;
 }
 
 #app {
